# SAFMC-21-D2-Team2

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
launch/: box.launch  deploy.launch  hole.launch  hole_faith.launch
models/hole/: model.config  model.sdf
models/hole/meshes/: hole.STL  hole.dae
src/: box  box.py  box_follow  box_follow.py  cmd.py  deploy  deploy.py  down_cv.py  drone  drone.py  green_square.py  groundstationnoread.py  groundstationqr.py  hole_detector  hole_detector.py  hole_follow  hole_follow.py  hole_follow_blind  hole_follow_blind.py  hole_follow_faith  hole_follow_faith.py  hsv_calib.py  land.py  node.cpp  node_class.cpp  servo.py  uvc.py
